[project]
name = "mcp-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "datasets>=4.8.5",
    "fastapi[standard]>=0.136.3",
    "mcp[cli]>=1.27.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "redisvl>=0.3.9",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
]
